# dtkwidget

./: .gitignore  CMakeLists.txt  compile.sh
cmake/: config.cmake  dtkwidgets_common.cmake  platform_specific.cmake  tools.cmake
cmake/DtkWidget/: DtkWidgetConfig.cmake.in  dtkwidget.pc.in
cmake/DtkWidget5.5/: dtkwidget5.5.pc.in  qt_lib_dtkwidget5.5.pri.in
debian/: api.json  control
examples/dwidget-examples/collections/: CMakeLists.txt
rpm/: dtkwidget.spec
src/: CMakeLists.txt
src/widgets/: dapplication.cpp  darrowrectangle.cpp  dprintpickcolorwidget.cpp  dprintpreviewdialog.cpp  dstyle.cpp  dtitlebar.cpp  dwidgetstype.h
tests/: CMakeLists.txt  main.cpp  test-recoverage.sh  tests.pro
tests/src/printpreview/: ut_dprintpickcolorwidget.cpp
tools/svgc/: CMakeLists.txt
